TestSuite/errors/err0059.pas
begin
writeln(nil in [2,3]);
end.